# Lab_6

./: .travis.yml  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  matrix_lib.cpp  matrix_lib.h
